Начал делать под 320

--- a/lk2.html
+++ b/lk2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Главная</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-  <link rel="stylesheet" href="css/320.css" type="text/css" media="screen" />
+  <title>Главная</title>
+  <link rel="stylesheet" href="css/320.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 </head>
 <body>
 <div class="fullwidth">
