--- a/lk15.html
+++ b/lk15.html
@@ -69,6 +69,11 @@
                   </span>
                 <span class="ico_t">Расход</span>
               </a>
+              <ul class="sub_menu">
+                <li><a href="#">Отгрузка</a></li>
+                <li><a href="#">Списание</a></li>
+                <li><a href="#">Продажа</a></li>
+              </ul>
             </li>
           </ul>
         </div>
