--- a/lk1.html
+++ b/lk1.html
@@ -29,6 +29,11 @@
                   </span>
                   <span class="ico_t">Склады</span>
                 </a>
+                <ul class="sub_menu">
+                  <li><a href="#">Карточка склада</a></li>
+                  <li><a href="#">Иерархия дочерних складов</a></li>
+                  <li><a href="#">Создание пользователей склада</a></li>
+                </ul>
               </li>
               <li>
                 <a href="#" class="nav_parent">
@@ -37,6 +42,11 @@
                   </span>
                   <span class="ico_t">Лицевые счета</span>
                 </a>
+                <ul class="sub_menu">
+                  <li><a href="#">Детализация по лицевому счёту склада</a></li>
+                  <li><a href="#">Детализация по лицевому счёту партнёра</a></li>
+                  <li><a href="#">Движение Денежных Средств по складу</a></li>
+                </ul>
               </li>
               <li>
                 <a href="#" class="nav_parent">
@@ -45,6 +55,11 @@
                   </span>
                   <span class="ico_t">Товары</span>
                 </a>
+                <ul class="sub_menu">
+                  <li><a href="#">Все товарные документы</a></li>
+                  <li><a href="#">Складские обороты</a></li>
+                  <li><a href="#">Каталог/ складские остатки</a></li>
+                </ul>
               </li>
               <li>
                 <a href="#" class="nav_parent">
@@ -53,6 +68,14 @@
                   </span>
                   <span class="ico_t">Партнеры</span>
                 </a>
+                <ul class="sub_menu">
+                  <li><a href="#">Партнёры</a></li>
+                  <li><a href="#">Регистрация партнёра</a></li>
+                  <li><a href="#">Карточка партнёра</a></li>
+                  <li><a href="#">История организации по периодам*</a></li>
+                  <li><a href="#">История показателей партнёра по периодам *</a></li>
+                  <li><a href="#">История бонусов (КЕ) *</a></li>
+                </ul>
               </li>
               <li>
                 <a href="#" class="nav_parent">
@@ -61,6 +84,11 @@
                   </span>
                   <span class="ico_t">Приход</span>
                 </a>
+                <ul class="sub_menu">
+                  <li><a href="#">Заказ/приёмка</a></li>
+                  <li><a href="#">Пополнение</a></li>
+                  <li><a href="#">Возврат</a></li>
+                </ul>
               </li>
               <li>
                 <a href="#" class="nav_parent">
