--- a/lk1.html
+++ b/lk1.html
@@ -455,9 +455,9 @@
         </div>
         <div class="footer">
           <div class="footer_line">
-            <a href="#">Начислить / списать средства</a>
-            <a href="#">Перевести между лицевыми счетами</a>
-            <a href="#" class="send_points">Перевести баллы между партнерами</a>
+            <a href="#" class="footer_line_link">Начислить / списать средства</a>
+            <a href="#" class="footer_line_link">Перевести между лицевыми счетами</a>
+            <a href="#" class="footer_line_link send_points">Перевести баллы между партнерами</a>
           </div>
         </div>
       </div>
