--- a/lk4.html
+++ b/lk4.html
@@ -130,7 +130,7 @@
           <h1>Движение по лицевому счету</h1>
         </div>
         <div class="component">
-          <div class="component_head">
+          <div class="component_head" style="margin-bottom: 0">
             <div class="component_head_sort" style="width: 100%">
               <div class="line_param_input" style="width: 49%; float: left">
                 <div class="label_in">
@@ -141,7 +141,7 @@
               </div>
               <div class="line_param_input" style="width: 49%; float: left; margin: 2px 0 0 15px">
                 <label style="font-size: 12px; color: #9A9A9A;">Период от и до</label>
-                <input type="text" value="Период от и до" placeholder=""/>
+                <input type="text" placeholder="Период от и до"/>
                 <span class="calendar"></span>
               </div>
             </div>
@@ -157,7 +157,7 @@
               </div>
               <div class="middle_part">
                 <table>
-                  <tr class="head_t">
+                  <tr class="head_t head_t_th">
                     <th style="width: 5%">Дата операции</th>
                     <th>На счет / Со счета</th>
                     <th>Тип операции</th>
