--- a/lk6.html
+++ b/lk6.html
@@ -136,7 +136,7 @@
             <div class="component_head_sort">
               <div class="line_param_input">
                 <label>Период от и до</label>
-                <input type="text" value="01.04.2020 - 09.09.2020" placeholder=""/>
+                <input type="text" placeholder="01.04.2020 - 09.09.2020"/>
                 <span class="calendar"></span>
               </div>
             </div>
