--- a/lk10.html
+++ b/lk10.html
@@ -133,7 +133,7 @@
             <div class="component_head_sort" style="width: 100%">
               <div class="line_param_input" style="width: 49%; float: left">
                 <label>Период от и до</label>
-                <input type="text" value="01.04.2020 - 09.09.2020" placeholder=""/>
+                <input type="text" placeholder="01.04.2020 - 09.09.2020"/>
                 <span class="calendar"></span>
               </div>
               <div class="line_param_input" style="width: 49%; float: left; margin: 25px 0 0 15px">
