--- a/lk3.html
+++ b/lk3.html
@@ -147,134 +147,198 @@
                 </ul>
               </div>
               <div class="middle_part">
+
                 <table class="otch_p fixtable">
                   <thead>
                   <tr class="head_t">
                     <th>Период</th>
-                    <th>Не активность</th>
                     <th>ЛО</th>
                     <th>ГО</th>
                     <th>НГО</th>
                     <th>ОО</th>
                     <th>КО</th>
+                    <th>Не активность</th>
+
                     <th>Ранг на начало</th>
                     <th>Расчетный ранг</th>
-                    <th>Баллы в резерве</th>
+                    <th>Ранг на конец</th>
                   </tr>
                   </thead>
                   <tbody>
-                  <tr class="tbody">
-                    <td>
-                      <div class="lin_t_top">
-                        <span class="lt5">Октябрь 2020</span>
-                      </div>
-                    </td>
-                    <td>4/2/8</td>
-                    <td>347</td>
-                    <td>411,3</td>
-                    <td>678,3</td>
-                    <td>511,7</td>
-                    <td>561</td>
-                    <td>Наименование</td>
-                    <td>Наименование</td>
-                    <td>4347</td>
-                  </tr>
                   <tr class="level_nofill">
                     <td>
                       <div class="lin_t_top">
-                        <span class="lt5">Октябрь 2020</span>
+
+                        <span class="lt5">Сентябрь 2020</span>
                       </div>
+
                     </td>
-                    <td>4/2/8</td>
-                    <td>347</td>
+
+                    <td>456</td>
                     <td>411,3</td>
                     <td>678,3</td>
                     <td>511,7</td>
                     <td>561</td>
+                    <td>3/6/12</td>
                     <td>Наименование</td>
                     <td>Наименование</td>
-                    <td>4347</td>
+                    <td>Наименование</td>
                   </tr>
+
                   <tr class="level_nofill">
                     <td>
                       <div class="lin_t_top">
-                        <span class="lt5">Октябрь 2020</span>
+
+                        <span class="lt5">Сентябрь 2020</span>
                       </div>
+
                     </td>
-                    <td>4/2/8</td>
-                    <td>347</td>
+                    <td>456</td>
                     <td>411,3</td>
                     <td>678,3</td>
                     <td>511,7</td>
                     <td>561</td>
+                    <td>3/6/12</td>
                     <td>Наименование</td>
                     <td>Наименование</td>
-                    <td>4347</td>
+                    <td>Наименование</td>
                   </tr>
+
                   <tr class="level_nofill">
                     <td>
                       <div class="lin_t_top">
-                        <span class="lt5">Октябрь 2020</span>
+
+                        <span class="lt5">Сентябрь 2020</span>
                       </div>
+
                     </td>
-                    <td>4/2/8</td>
-                    <td>347</td>
+                    <td>456</td>
                     <td>411,3</td>
                     <td>678,3</td>
                     <td>511,7</td>
                     <td>561</td>
+                    <td>3/6/12</td>
                     <td>Наименование</td>
                     <td>Наименование</td>
-                    <td>4347</td>
+                    <td>Наименование</td>
                   </tr>
+
                   <tr class="level_nofill">
                     <td>
                       <div class="lin_t_top">
-                        <span class="lt5">Октябрь 2020</span>
+
+                        <span class="lt5">Сентябрь 2020</span>
                       </div>
+
                     </td>
-                    <td>4/2/8</td>
-                    <td>347</td>
+                    <td>456</td>
                     <td>411,3</td>
                     <td>678,3</td>
                     <td>511,7</td>
                     <td>561</td>
+                    <td>3/6/12</td>
                     <td>Наименование</td>
                     <td>Наименование</td>
-                    <td>4347</td>
+                    <td>Наименование</td>
                   </tr>
+
                   <tr class="level_nofill">
                     <td>
                       <div class="lin_t_top">
-                        <span class="lt5">Октябрь 2020</span>
+
+                        <span class="lt5">Сентябрь 2020</span>
                       </div>
+
                     </td>
-                    <td>4/2/8</td>
-                    <td>347</td>
+                    <td>456</td>
                     <td>411,3</td>
                     <td>678,3</td>
                     <td>511,7</td>
                     <td>561</td>
+                    <td>3/6/12</td>
                     <td>Наименование</td>
                     <td>Наименование</td>
-                    <td>4347</td>
+                    <td>Наименование</td>
                   </tr>
+
                   <tr class="level_nofill">
                     <td>
                       <div class="lin_t_top">
-                        <span class="lt5">Октябрь 2020</span>
+
+                        <span class="lt5">Сентябрь 2020</span>
                       </div>
+
                     </td>
-                    <td>4/2/8</td>
-                    <td>347</td>
+                    <td>456</td>
                     <td>411,3</td>
                     <td>678,3</td>
                     <td>511,7</td>
                     <td>561</td>
+                    <td>3/6/12</td>
                     <td>Наименование</td>
                     <td>Наименование</td>
-                    <td>4347</td>
+                    <td>Наименование</td>
                   </tr>
+
+                  <tr class="level_nofill">
+                    <td>
+                      <div class="lin_t_top">
+
+                        <span class="lt5">Сентябрь 2020</span>
+                      </div>
+
+                    </td>
+                    <td>456</td>
+                    <td>411,3</td>
+                    <td>678,3</td>
+                    <td>511,7</td>
+                    <td>561</td>
+                    <td>3/6/12</td>
+                    <td>Наименование</td>
+                    <td>Наименование</td>
+                    <td>Наименование</td>
+                  </tr>
+
+                  <tr class="level_nofill">
+                    <td>
+                      <div class="lin_t_top">
+
+                        <span class="lt5">Сентябрь 2020</span>
+                      </div>
+
+                    </td>
+                    <td>456</td>
+                    <td>411,3</td>
+                    <td>678,3</td>
+                    <td>511,7</td>
+                    <td>561</td>
+                    <td>3/6/12</td>
+                    <td>Наименование</td>
+                    <td>Наименование</td>
+                    <td>Наименование</td>
+                  </tr>
+
+                  <tr class="level_nofill">
+                    <td>
+                      <div class="lin_t_top">
+
+                        <span class="lt5">Сентябрь 2020</span>
+                      </div>
+
+                    </td>
+                    <td>456</td>
+                    <td>411,3</td>
+                    <td>678,3</td>
+                    <td>511,7</td>
+                    <td>561</td>
+                    <td>3/6/12</td>
+                    <td>Наименование</td>
+                    <td>Наименование</td>
+                    <td>Наименование</td>
+                  </tr>
+
+
+
                   </tbody>
                 </table>
               </div>
