--- a/lk9.html
+++ b/lk9.html
@@ -139,7 +139,7 @@
               </div>
               <div class="line_param_input" style="width: 49%; float: left; margin: 2px 0 0 15px">
                 <label style="font-size: 12px; color: #9A9A9A;">Период от и до</label>
-                <input type="text" value="01.04.2020 - 09.09.2020" placeholder=""/>
+                <input type="text" placeholder="01.04.2020 - 09.09.2020"/>
                 <span class="calendar"></span>
               </div>
             </div>
