--- a/lk1.html
+++ b/lk1.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Главная</title>
-  <link rel="stylesheet" href="css/320.css" type="text/css" media="screen">
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="css/320.css" type="text/css" media="screen">
 </head>
 <body>
   <div class="fullWidth">
@@ -108,6 +108,9 @@
         </div>
         <div class="header">
           <div class="acc_b">
+            <div class="acc_b_menu">
+              <img src="images/burger-menu.svg" alt="">
+            </div>
             <div class="acc_n">
               <div class="acc_n_text">Название склада</div>
               <div class="acc_n_ico">
@@ -399,11 +402,12 @@
                       <div class="nav_links">
                         <a class="brd_green fill w50" href="#">Стать партнером</a>
                         <a class="brd_green w50 last" href="#">Терминировать</a>
+                        <a class="brd_green fill w50 for_adaptive" href="#" style="float: right">Трансферт</a>
                       </div>
                     </div>
                     <div class="r_p">
                       <div class="nav_links">
-                        <a class="brd_green fill w50" href="#" style="float: right">Трансферт</a>
+                        <a class="without_adaptive brd_green fill w50" href="#" style="float: right">Трансферт</a>
                       </div>
                     </div>
                   </div>
