--- a/lk2.html
+++ b/lk2.html
@@ -108,6 +108,9 @@
       </div>
       <div class="header">
         <div class="acc_b">
+          <div class="acc_b_menu">
+            <img src="images/burger-menu.svg" alt="">
+          </div>
           <div class="acc_n">
             <div class="acc_n_text">Название склада</div>
             <div class="acc_n_ico">
@@ -126,7 +129,6 @@
       <div class="content">
         <!-- ШАПКА КОНТЕНТНОЙ ЧАСТИ -->
         <div class="c_head">
-          <a href="#" class="back">Назад</a>
           <h1>История организации по периодам</h1>
 
         </div>
