--- a/lk3.html
+++ b/lk3.html
@@ -5,8 +5,8 @@
   <title>Главная</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/320.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="css/320.css" type="text/css" media="screen" />
 </head>
 <body>
 <div class="fullwidth">
@@ -109,6 +109,9 @@
       </div>
       <div class="header">
         <div class="acc_b">
+          <div class="acc_b_menu">
+            <img src="images/burger-menu.svg" alt="">
+          </div>
           <div class="acc_n">
             <div class="acc_n_text">Название склада</div>
             <div class="acc_n_ico">
@@ -126,7 +129,6 @@
       </div>
       <div class="content">
         <div class="c_head">
-          <a href="#" class="back">Назад</a>
           <h1>История показателей партнера по периодам</h1>
         </div>
         <div class="component">
