--- a/lk15.html
+++ b/lk15.html
@@ -108,6 +108,9 @@
       </div>
       <div class="header">
         <div class="acc_b">
+          <div class="acc_b_menu">
+            <img src="images/burger-menu.svg" alt="">
+          </div>
           <div class="acc_n">
             <div class="acc_n_text">Название склада</div>
             <div class="acc_n_ico">
