--- a/lk4.html
+++ b/lk4.html
@@ -109,6 +109,9 @@
       </div>
       <div class="header">
         <div class="acc_b">
+          <div class="acc_b_menu">
+            <img src="images/burger-menu.svg" alt="">
+          </div>
           <div class="acc_n">
             <div class="acc_n_text">Название склада</div>
             <div class="acc_n_ico">
@@ -126,20 +129,19 @@
       </div>
       <div class="content">
         <div class="c_head">
-          <a href="#" class="back">Назад</a>
           <h1>Движение по лицевому счету</h1>
         </div>
         <div class="component">
           <div class="component_head" style="margin-bottom: 0">
             <div class="component_head_sort" style="width: 100%">
-              <div class="line_param_input" style="width: 49%; float: left">
+              <div class="line_param_input line_param_input_t">
                 <div class="label_in">
                   <input type="text" class="tinput" />
                   <label class="tlabel">Тип операции</label>
                   <span class="array_down"></span>
                 </div>
               </div>
-              <div class="line_param_input" style="width: 49%; float: left; margin: 2px 0 0 15px">
+              <div class="line_param_input line_param_input_t">
                 <label style="font-size: 12px; color: #9A9A9A;">Период от и до</label>
                 <input type="text" placeholder="Период от и до"/>
                 <span class="calendar"></span>
