--- a/lk6.html
+++ b/lk6.html
@@ -108,6 +108,9 @@
       </div>
       <div class="header">
         <div class="acc_b">
+          <div class="acc_b_menu">
+            <img src="images/burger-menu.svg" alt="">
+          </div>
           <div class="acc_n">
             <div class="acc_n_text">Название склада</div>
             <div class="acc_n_ico">
@@ -125,7 +128,7 @@
       </div>
       <div class="content">
         <div class="c_head">
-          <div style="margin-bottom: 15px">
+          <div class="c_head_a">
             <img src="./images/back.svg" alt="" style="float: left; margin-right: 10px; cursor: pointer">
             <a href="#" class="back" style="display: block">Возврат</a>
           </div>
