--- a/lk7.html
+++ b/lk7.html
@@ -108,6 +108,9 @@
       </div>
       <div class="header">
         <div class="acc_b">
+          <div class="acc_b_menu">
+            <img src="images/burger-menu.svg" alt="">
+          </div>
           <div class="acc_n">
             <div class="acc_n_text">Название склада</div>
             <div class="acc_n_ico">
@@ -135,14 +138,14 @@
           </div>
           <div class="component_head">
             <div class="component_head_sort" style="width: 100%">
-              <div class="line_param_input" style="width: 49%; float: left">
+              <div class="line_param_input line_param_input_t">
                 <div class="label_in">
                   <input type="text" class="tinput" />
                   <label class="tlabel">Поиск по всему</label>
                   <span class="search"></span>
                 </div>
               </div>
-              <div class="line_param_input" style="width: 49%; float: left; margin: 2px 0 0 15px">
+              <div class="line_param_input line_param_input_t">
                 <label style="font-size: 12px; color: #9A9A9A;">Период от и до</label>
                 <input type="text" placeholder="Период от и до"/>
                 <span class="calendar"></span>
