--- a/lk10.html
+++ b/lk10.html
@@ -134,12 +134,12 @@
         <div class="component">
           <div class="component_head">
             <div class="component_head_sort" style="width: 100%">
-              <div class="line_param_input" style="width: 49%; float: left">
+              <div class="line_param_input line_param_input_t">
                 <label>Период от и до</label>
                 <input type="text" placeholder="01.04.2020 - 09.09.2020"/>
                 <span class="calendar"></span>
               </div>
-              <div class="line_param_input" style="width: 49%; float: left; margin: 25px 0 0 15px">
+              <div class="line_param_input line_param_input_t">
                 <div class="check_block">
                   <input type="checkbox" class="line_param_checkbox" id="period" checked/>
                   <label class="line_param_label" for="period">Наличка</label>
