--- a/lk11.html
+++ b/lk11.html
@@ -140,7 +140,7 @@
               </div>
             </div>
             <div class="r_p" style="padding-right: 0">
-              <div class="nav_links">
+              <div class="nav_links nav_links_t">
                 <a class="brd_green fill w50 add_partner" href="#" style="margin-top: 0; float: right">Добавить нового партнера</a>
               </div>
             </div>
@@ -481,7 +481,7 @@
             <a href="#" class="closebig"></a>
             <h3>Фильтры поиска</h3>
             <div class="component_body">
-              <div class="line_param_input" style="float: left; margin: 25px 0 0 15px">
+              <div class="line_param_input line_param_input_t">
                 <div class="modal_check_block">
                   <input type="checkbox" class="line_param_checkbox" id="period" checked/>
                   <label class="line_param_label" for="period">Показывать терминированных</label>
