--- a/lk9.html
+++ b/lk9.html
@@ -133,14 +133,14 @@
         <div class="component">
           <div class="component_head">
             <div class="component_head_sort" style="width: 100%">
-              <div class="line_param_input" style="width: 49%; float: left">
+              <div class="line_param_input line_param_input_t">
                 <div class="label_in">
                   <input type="text" class="tinput" />
                   <label class="tlabel">Поиск по артиклу или наименованию</label>
                   <span class="search"></span>
                 </div>
               </div>
-              <div class="line_param_input" style="width: 49%; float: left; margin: 2px 0 0 15px">
+              <div class="line_param_input line_param_input_t">
                 <label style="font-size: 12px; color: #9A9A9A;">Период от и до</label>
                 <input type="text" placeholder="01.04.2020 - 09.09.2020"/>
                 <span class="calendar"></span>
@@ -494,7 +494,7 @@
       <div class="footer">
         <div class="footer_line">
           <div class="title_line">
-            <div class="title_line_t search">Фильтры поиска</div>
+            <div class="title_line_t filter">Фильтры поиска</div>
           </div>
           <div class="modal_line">
             <a href="#" class="closebig"></a>
