--- a/lk15.html
+++ b/lk15.html
@@ -133,14 +133,14 @@
         <div class="component">
           <div class="component_head" style="margin-bottom: 0">
             <div class="component_head_sort" style="width: 100%">
-              <div class="line_param_input" style="width: 49%; float: left">
+              <div class="line_param_input line_param_input_t">
                 <div class="label_in">
                   <input type="text" class="tinput" />
                   <label class="tlabel">Поиск по всему</label>
                   <span class="search"></span>
                 </div>
               </div>
-              <div class="line_param_input" style="width: 49%; float: left; margin: 2px 0 0 15px">
+              <div class="line_param_input line_param_input_t">
                 <label style="font-size: 12px; color: #9A9A9A;">Период от и до</label>
                 <input type="text" placeholder="Период от и до"/>
                 <span class="calendar"></span>
