--- a/lk1.html
+++ b/lk1.html
@@ -11,6 +11,7 @@
   <div class="fullWidth">
     <div class="wrapper">
       <div class="full_content">
+        <div class="overlay"></div>
         <div class="left_menu active">
           <div class="left_menu_top">
             <div class="logo">
@@ -443,6 +444,36 @@
                       <div class="line_param_bottom">
                         100
                       </div>
+                    </div>
+                    <div class="label_in">
+                      <input type="text" class="tinput" />
+                      <label class="tlabel">Количество к передаче</label>
+                    </div>
+                    <div class="nav_links">
+                      <a class="brd_green fill w50" href="#" style="float: right">Перевести</a>
+                    </div>
+                  </div>
+                  <div class="l_p l_p_adaptive">
+                    <div class="line_param">
+                      <div class="line_param_top">
+                        ЛО
+                      </div>
+                      <div class="line_param_bottom">
+                        0
+                      </div>
+                    </div>
+                    <div class="line_param">
+                      <div class="line_param_top">
+                        Резерв
+                      </div>
+                      <div class="line_param_bottom">
+                        100
+                      </div>
+                    </div>
+                    <div class="label_in">
+                      <input type="text" class="tinput" />
+                      <label class="tlabel">Партнер-получатель</label>
+                      <a href="#" class="line_param_down"></a>
                     </div>
                     <div class="label_in">
                       <input type="text" class="tinput" />
