--- a/lk13.html
+++ b/lk13.html
@@ -132,7 +132,9 @@
             <img src="./images/back.svg" alt="" style="float: left; margin-right: 10px; cursor: pointer">
             <a href="#" class="back" style="display: block">Запросы от нижестоящих</a>
           </div>
-          <h1>Заказ №20</h1>
+          <div class="title_adaptive">
+            <h1>Заказ №20</h1>
+          </div>
         </div>
         <div class="component_head">
           <div class="select">
