--- a/lk16.html
+++ b/lk16.html
@@ -132,12 +132,14 @@
             <img src="./images/back.svg" alt="" style="float: left; margin-right: 10px; cursor: pointer">
             <a href="#" class="back" style="display: block">Продажи</a>
           </div>
-          <h1>Создание клиентско дистрибьютерскую продажу</h1>
+          <div class="title_adaptive">
+            <h1>Создание клиентско дистрибьютерскую продажу</h1>
+          </div>
         </div>
         <div class="component_body">
           <div class="line_param_input">
             <div class="sortblock">
-              <div class="sortblock_param">
+              <div class="sortblock_param sortblock_param_adaptive">
                 <h5 style="margin: 25px 0">Владелец склада</h5>
                 <div class="radio">
                   <input class="custom-radio" type="radio" id="param1" name="param" value="Полное дерево">
