--- a/lk5.html
+++ b/lk5.html
@@ -128,10 +128,10 @@
         </div>
       </div>
       <div class="content">
-        <div class="c_head">
+        <div class="c_head c_head_adaptive">
           <h1>Все товарные документы</h1>
         </div>
-        <div class="component">
+        <div class="component component_adaptive">
           <div class="component_head">
             <div class="component_head_sort">
               <div class="line_param_input">
@@ -141,11 +141,11 @@
               </div>
             </div>
           </div>
-          <div class="component_tags">
+          <div class="component_tags component_tags_adaptive">
             <div class="tags">Расходные накладные<span class="closes"></span></div>
           </div>
           <div class="component_action">
-            <div class="nav_top">
+            <div class="nav_top nav_top_adaptive">
               <span>Действия:</span>
               <ul>
                 <li><a href="#">Списать</a></li>
