--- a/lk7.html
+++ b/lk7.html
@@ -127,10 +127,10 @@
         </div>
       </div>
       <div class="content">
-        <div class="c_head">
+        <div class="c_head c_head_adaptive">
           <h1>Возвраты</h1>
         </div>
-        <div class="component">
+        <div class="component component_adaptive">
           <div class="component_head">
             <div class="nav_links" style="margin-top: 0">
               <a class="brd_green fill w50 create_account" href="#">Создать возврат</a>
