--- a/lk9.html
+++ b/lk9.html
@@ -146,7 +146,7 @@
                 <span class="calendar"></span>
               </div>
             </div>
-            <div class="component_tags">
+            <div class="component_tags component_tags_adaptive">
               <div class="tags">Гель-бад<span class="closes"></span></div>
             </div>
           </div>
