--- a/lk11.html
+++ b/lk11.html
@@ -127,7 +127,7 @@
         </div>
       </div>
       <div class="content">
-        <div class="c_head">
+        <div class="c_head c_head_adaptive">
           <h1>Партнеры склада</h1>
         </div>
         <div class="component">
