--- a/lk8.html
+++ b/lk8.html
@@ -141,7 +141,7 @@
                 </div>
               </div>
             </div>
-            <div class="component_tags">
+            <div class="component_tags component_tags_adaptive">
               <div class="tags">Гель-бад<span class="closes"></span></div>
             </div>
           </div>
