Добил 320 + карточка склада

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <li><a href="lk14.html">Запросы от вышестоящих</a></li>
     <li><a href="lk15.html">Продажи</a></li>
     <li><a href="lk16.html">Создание клиентско дистрибьютерскую продажу</a></li>
+    <li><a href="lk17.html">Карточка склада</a></li>
 </ul>
 </body>
 </html>
