--- a/lk17.html
+++ b/lk17.html
@@ -416,7 +416,7 @@
           <div class="component_body" style="padding-bottom: 80px">
             <h3 style="margin-top: 15px">Настройка клиентской скидки</h3>
             <div class="line_param">
-              <div class="l_p">
+              <div class="l_p l_p_cart_adaptive">
                 <h5>Объем</h5>
                 <div class="line_param">
                   <div class="line_param_top">
@@ -463,7 +463,7 @@
                   <div class="line_param_border"></div>
                 </div>
               </div>
-              <div class="r_p">
+              <div class="r_p r_p_cart_adaptive">
                 <h5 class="cart_rp_title">Скидка</h5>
                 <div class="line_param">
                   <div class="line_param_bottom">
@@ -520,6 +520,9 @@
                 <div class="nav_links">
                   <a class="brd_green fill w50" href="#" style="float: right">Сохранить</a>
                 </div>
+              </div>
+              <div class="nav_links nav_links_adaptive">
+                <a class="brd_green fill w50" href="#" style="float: right">Сохранить</a>
               </div>
             </div>
           </div>
