--- a/lk4.html
+++ b/lk4.html
@@ -16,7 +16,7 @@
         <div class="left_menu_top">
           <div class="logo">
             <a href="#">
-              <img src="images/logo.png" alt="Артлайф"/>
+              <img src="images/logo.svg" alt="Артлайф" style="width: 52px" />
               <img class="lhid" src="images/logo_1.png" alt="Артлайф"/>
             </a>
           </div>
