--- a/lk15.html
+++ b/lk15.html
@@ -288,7 +288,7 @@
                       <td>
                         <div class="lin_t_top">
                           <span>2020-000255</span>
-                          <a href="#" class="lt3">Просмотр</a>
+                          <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
@@ -493,14 +493,7 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="footer">
-        <div class="footer_line">
-          <div class="title_line">
-            <div class="title_line_t filter">Фильтры поиска</div>
-          </div>
-          <div class="modal_line">
+          <div class="modal_view">
             <a href="#" class="closebig"></a>
             <h3>Накладная № 2020-000255</h3>
             <div class="component_body">
@@ -513,38 +506,38 @@
                   </div>
                   <table class="otch_p bordered">
                     <thead>
-                      <tr class="head_t">
-                        <th>№</th>
-                        <th>Артикул</th>
-                        <th>Товар</th>
-                        <th>Цена</th>
-                        <th>Кол-во</th>
-                        <th>Стоимость</th>
-                        <th>Возвращено</th>
-                        <th>Баллов всего</th>
-                      </tr>
+                    <tr class="head_t">
+                      <th>№</th>
+                      <th>Артикул</th>
+                      <th>Товар</th>
+                      <th>Цена</th>
+                      <th>Кол-во</th>
+                      <th>Стоимость</th>
+                      <th>Возвращено</th>
+                      <th>Баллов всего</th>
+                    </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>42451467</td>
-                        <td>42451467</td>
-                        <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                        <td>1076.40</td>
-                        <td>34</td>
-                        <td>1076.40</td>
-                        <td>1076.40</td>
-                        <td>10.3</td>
-                      </tr>
-                      <tr>
-                        <td>42451467</td>
-                        <td>42451467</td>
-                        <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                        <td>1076.40</td>
-                        <td>34</td>
-                        <td>1076.40</td>
-                        <td>1076.40</td>
-                        <td>10.3</td>
-                      </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
                     </tbody>
                   </table>
                 </div>
