--- a/lk17.html
+++ b/lk17.html
@@ -170,7 +170,7 @@
               </div>
               <div class="c_p_cart">
                 <div>
-                  <span>Количество</span>
+                  <span>ID</span>
                   <input value="23 |" class="input_edit"/>
                 </div>
               </div>
@@ -195,7 +195,7 @@
               </div>
               <div class="c_p_cart">
                 <div>
-                  <span>Количество</span>
+                  <span>Город</span>
                   <input value="Новос |" class="input_edit"/>
                 </div>
               </div>
