Устранил оставшиеся замечания

--- a/lk11.html
+++ b/lk11.html
@@ -490,9 +490,9 @@
                   <input type="checkbox" class="line_param_checkbox" id="cashless" checked/>
                   <label class="line_param_label" for="cashless">Показывать только с не нулевыми ЛО</label>
                 </div>
-                <div class="modal_check_block" style="width: 15%; text-align: center;">
+                <div class="modal_check_block">
                   <input type="checkbox" class="line_param_checkbox" id="personal"/>
-                  <label class="line_param_label" for="personal" style="margin-left: 0;">Показывать партнеров нижестоящих складов</label>
+                  <label class="line_param_label" for="personal" style="margin-left: 20px;">Показывать партнеров нижестоящих складов</label>
                 </div>
               </div>
               <div class="r_p" style="float: right; padding-right: 0">
