--- a/lk3.html
+++ b/lk3.html
@@ -12,6 +12,7 @@
 <div class="fullwidth">
   <div class="wrapper">
     <div class="full_content">
+      <div class="overlay"></div>
       <div class="left_menu active">
         <div class="left_menu_top">
           <div class="logo">
