--- a/lk2.html
+++ b/lk2.html
@@ -365,7 +365,7 @@
                     <div class="l_p">
                       <div class="sortblock">
                               <div class="sortblock_head">
-                                  Выбор дерева
+                                  <h5>Выбор дерева</h5>
                               </div>
                               <div class="sortblock_param">
                                   <div class="radio">
