--- a/lk2.html
+++ b/lk2.html
@@ -107,26 +107,26 @@
           </ul>
         </div>
       </div>
-      <div class="header">
-        <div class="acc_b">
-          <div class="acc_b_menu">
-            <img src="images/burger-menu.svg" alt="">
-          </div>
-          <div class="acc_n">
-            <div class="acc_n_text">Название склада</div>
-            <div class="acc_n_ico">
-              <img src="images/avatar.svg" alt=""/>
+        <div class="header">
+            <div class="acc_b">
+                <div class="acc_b_menu">
+                    <img src="images/burger-menu.svg" alt="">
+                </div>
+                <div class="acc_n">
+                    <div class="acc_n_text">Козлов В.И.</div>
+                    <div class="acc_n_ico">
+                        <img src="images/avatar.svg" alt=""/>
+                    </div>
+                    <div class="acc_nav">
+                        <ul>
+                            <li><a href="#">Козлов В.И.</a></li>
+                            <li><a href="#"><span>Роль</span>Управляющий</a></li>
+                            <li class="logout"><a href="#">Выйти</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="acc_nav">
-              <ul>
-                <li><a href="#">Название склада</a></li>
-                <li><a href="#"><span>Статус</span>Директор</a></li>
-                <li class="logout"><a href="#">Выйти</a></li>
-              </ul>
-            </div>
-          </div>
         </div>
-      </div>
       <div class="content">
         <!-- ШАПКА КОНТЕНТНОЙ ЧАСТИ -->  
         <div class="c_head">
