--- a/lk7.html
+++ b/lk7.html
@@ -320,7 +320,7 @@
                   <span class="mo_left_name"> <span class="mo_left"></span> Январь</span>
                 </div>
                 <table>
-                  <tr class="head_calend">
+                  <tbody><tr class="head_calend">
                     <td>Пн</td>
                     <td>Вт</td>
                     <td>Ср</td>
@@ -374,14 +374,14 @@
                     <td class="month_day">31</td>
                     <td class="end_day"></td>
                   </tr>
-                </table>
+                  </tbody></table>
               </div>
               <div class="modal_calend_right">
                 <div class="month_right">
                   <span class="mo_left_name"> <span class="mo_right"></span>Февраль</span>
                 </div>
                 <table>
-                  <tr class="head_calend">
+                  <tbody><tr class="head_calend">
                     <td>Пн</td>
                     <td>Вт</td>
                     <td>Ср</td>
@@ -435,7 +435,7 @@
                     <td class="month_day">31</td>
                     <td class="end_day"></td>
                   </tr>
-                </table>
+                  </tbody></table>
               </div>
             </div>
           </div>
