--- a/lk15.html
+++ b/lk15.html
@@ -375,7 +375,7 @@
                   <span class="mo_left_name"> <span class="mo_left"></span> Январь</span>
                 </div>
                 <table>
-                  <tr class="head_calend">
+                  <tbody><tr class="head_calend">
                     <td>Пн</td>
                     <td>Вт</td>
                     <td>Ср</td>
@@ -429,14 +429,14 @@
                     <td class="month_day">31</td>
                     <td class="end_day"></td>
                   </tr>
-                </table>
+                  </tbody></table>
               </div>
               <div class="modal_calend_right">
                 <div class="month_right">
                   <span class="mo_left_name"> <span class="mo_right"></span>Февраль</span>
                 </div>
                 <table>
-                  <tr class="head_calend">
+                  <tbody><tr class="head_calend">
                     <td>Пн</td>
                     <td>Вт</td>
                     <td>Ср</td>
@@ -490,7 +490,7 @@
                     <td class="month_day">31</td>
                     <td class="end_day"></td>
                   </tr>
-                </table>
+                  </tbody></table>
               </div>
             </div>
           </div>
