--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <li><a href="lk15.html">Продажи</a></li>
     <li><a href="lk16.html">Создание клиентско дистрибьютерскую продажу</a></li>
     <li><a href="lk17.html">Карточка склада</a></li>
+    <li><a href="lk17.html">Иерархия дочерних складов</a></li>
 </ul>
 </body>
 </html>
