--- a/lk12.html
+++ b/lk12.html
@@ -137,8 +137,8 @@
               <div class="middle_part">
                 <table class="otch_p bordered">
                   <thead>
-                  <tr class="head_t">
-                    <th>
+                    <tr class="head_t">
+                    <th style="width: 15%">
                       <div>
                         <span>№ заявки П/П</span>
                       </div>
@@ -224,9 +224,9 @@
                   <tbody>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
+                        <div>
                           <span>22333</span>
-                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -240,9 +240,9 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
+                        <div>
                           <span>22333</span>
-                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -256,9 +256,9 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
+                        <div>
                           <span>22333</span>
-                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -272,9 +272,9 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
+                        <div>
                           <span>22333</span>
-                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -288,9 +288,9 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
+                        <div>
                           <span>22333</span>
-                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
