--- a/lk9.html
+++ b/lk9.html
@@ -129,7 +129,7 @@
       </div>
       <div class="content">
         <div class="c_head">
-          <h1>Складские остатки (операции по складу)</h1>
+          <h1>Складские обороты (операции по складу)</h1>
         </div>
         <div class="component">
           <div class="component_head">
@@ -163,7 +163,7 @@
                 <div style="overflow-x: scroll">
                   <table class="otch_p bordered">
                     <thead>
-                    <tr class="head_t">
+                      <tr class="head_t">
                       <th style="width: 9%; padding-right: 25px">
                         <div>
                           <span>ID товара</span>
@@ -293,11 +293,15 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
+                      <tr>
                       <td>2334</td>
                       <td>6000</td>
                       <td>VIP-продукция</td>
-                      <td>Бальзам для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline">Бальзам для волос "Натурасепт" сила трех масел, 250 мл</a>
+                        </div>
+                      </td>
                       <td>0</td>
                       <td>234</td>
                       <td>133</td>
@@ -309,54 +313,66 @@
                       <td>12</td>
                       <td>12</td>
                     </tr>
-                    <tr>
-                      <td>2334</td>
-                      <td>6000</td>
-                      <td>VIP-продукция</td>
-                      <td>Бальзам для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>0</td>
-                      <td>234</td>
-                      <td>133</td>
-                      <td>133</td>
-                      <td>45</td>
-                      <td>433</td>
-                      <td>12</td>
-                      <td>12</td>
-                      <td>12</td>
-                      <td>12</td>
-                    </tr>
-                    <tr>
-                      <td>2334</td>
-                      <td>6000</td>
-                      <td>VIP-продукция</td>
-                      <td>Бальзам для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>0</td>
-                      <td>234</td>
-                      <td>133</td>
-                      <td>133</td>
-                      <td>45</td>
-                      <td>433</td>
-                      <td>12</td>
-                      <td>12</td>
-                      <td>12</td>
-                      <td>12</td>
-                    </tr>
-                    <tr>
-                      <td>2334</td>
-                      <td>6000</td>
-                      <td>VIP-продукция</td>
-                      <td>Бальзам для волос "Натурасепт" сила трех масел, 250 мл</td>
-                      <td>0</td>
-                      <td>234</td>
-                      <td>133</td>
-                      <td>133</td>
-                      <td>45</td>
-                      <td>433</td>
-                      <td>12</td>
-                      <td>12</td>
-                      <td>12</td>
-                      <td>12</td>
-                    </tr>
+                      <tr>
+                        <td>2334</td>
+                        <td>6000</td>
+                        <td>VIP-продукция</td>
+                        <td>
+                          <div>
+                            <a href="#" class="lt3" style="text-decoration: underline">Бальзам для волос "Натурасепт" сила трех масел, 250 мл</a>
+                          </div>
+                        </td>
+                        <td>0</td>
+                        <td>234</td>
+                        <td>133</td>
+                        <td>133</td>
+                        <td>45</td>
+                        <td>433</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>12</td>
+                      </tr>
+                      <tr>
+                        <td>2334</td>
+                        <td>6000</td>
+                        <td>VIP-продукция</td>
+                        <td>
+                          <div>
+                            <a href="#" class="lt3" style="text-decoration: underline">Бальзам для волос "Натурасепт" сила трех масел, 250 мл</a>
+                          </div>
+                        </td>
+                        <td>0</td>
+                        <td>234</td>
+                        <td>133</td>
+                        <td>133</td>
+                        <td>45</td>
+                        <td>433</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>12</td>
+                      </tr>
+                      <tr>
+                        <td>2334</td>
+                        <td>6000</td>
+                        <td>VIP-продукция</td>
+                        <td>
+                          <div>
+                            <a href="#" class="lt3" style="text-decoration: underline">Бальзам для волос "Натурасепт" сила трех масел, 250 мл</a>
+                          </div>
+                        </td>
+                        <td>0</td>
+                        <td>234</td>
+                        <td>133</td>
+                        <td>133</td>
+                        <td>45</td>
+                        <td>433</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>12</td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
