--- a/lk17.html
+++ b/lk17.html
@@ -601,7 +601,7 @@
         </div>
       </div>
       <div class="footer">
-        <div class="footer_line" style="text-align: center">
+        <div class="footer_line footer_line_adaptive">
           <a href="#" class="footer_line_link">Начислить / списать средства</a>
           <a href="#" class="footer_line_link send_points">Перевести между лицевыми счетами</a>
         </div>
