--- a/lk18.html
+++ b/lk18.html
@@ -284,7 +284,7 @@
             </div>
           </div>
           <div class="modal_sklad">
-            <a href="#" class="closebig"></a>
+            <a href="#" class="closebig close_modal"></a>
             <h2>Создать дочерний склад</h2>
             <div class="component_body">
               <div class="line_param_input">
