много мелких фиксов

--- a/lk11.html
+++ b/lk11.html
@@ -495,7 +495,7 @@
       </div>
       <div class="footer">
         <div class="footer_line">
-          <div class="title_line">
+          <div class="title_line title_line_adaptive">
             <div class="title_line_t filter">Фильтры поиска</div>
           </div>
           <div class="modal_line">
