--- a/lk15.html
+++ b/lk15.html
@@ -289,7 +289,7 @@
                       <td>
                         <div class="lin_t_top">
                           <span>2020-000255</span>
-                          <a href="#" class="lt3 open_view">Просмотр</a>
+                          <a href="#" class="lt3 open_view modal_view_adaptive">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
