--- a/lk18.html
+++ b/lk18.html
@@ -134,7 +134,7 @@
         <div class="line_param_input">
           <div class="l_p" style="margin-bottom: 30px">
             <div class="nav_links" style="margin: 0">
-              <a class="brd_green fill w50 add_sklad" href="#">Создать новый склад</a>
+              <a class="brd_green fill w50 add_sklad_adaptive add_sklad" href="#">Создать новый склад</a>
             </div>
           </div>
         </div>
@@ -293,69 +293,69 @@
                     <h3 style="margin: 20px 0 0">Данные склада</h3>
                     <h5 style="margin: 25px 0">Владелец склада</h5>
                     <div class="radio">
-                      <input class="custom-radio" type="radio" id="param1" name="param" value="Полное дерево">
+                      <input class="custom-radio" type="radio" id="param1" name="owner" value="Выбрать из списка партнеров">
                       <label for="param1">Выбрать из списка партнеров</label>
                     </div>
                     <div class="radio">
-                      <input class="custom-radio" type="radio" id="param2" name="param" value="Директорское">
+                      <input class="custom-radio" type="radio" id="param2" name="owner" value="Ввести номер">
                       <label for="param2">Ввести номер</label>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="line_param_input">
-                <div class="l_p">
-                  <div class="label_in">
+                <div class="l_p block_nopadding">
+                  <div class="label_in block_nopadding">
                     <input type="text" class="tinput" />
                     <label class="tlabel">Партнер</label>
                     <a href="#" class="line_param_down"></a>
                   </div>
                 </div>
-                <div class="r_p">
+                <div class="r_p block_nopadding">
                   <div class="label_in">
                     <input type="text" class="tinput" />
                     <label class="tlabel">Контактное лицо</label>
                   </div>
                 </div>
-                <div style="padding-right: 5%">
+                <div class="block_three_column">
                   <div class="label_in_three_column">
                     <input type="text" class="tinput"/>
-                    <label class="tlabel">Город</label>
+                    <label class="tlabel_adaptive tlabel">Город</label>
                   </div>
                   <div class="label_in_three_column">
                     <input type="text" class="tinput"/>
-                    <label class="tlabel">Наименование склада</label>
+                    <label class="tlabel_adaptive tlabel">Наименование склада</label>
                   </div>
                   <div class="label_in_three_column">
                     <input type="text" class="tinput"/>
-                    <label class="tlabel">Адрес склада</label>
+                    <label class="tlabel_adaptive tlabel">Адрес склада</label>
                   </div>
                 </div>
-                <div style="margin-top: 25px; padding-right: 5%">
+                <div class="block_three_column">
                   <div class="label_in_three_column">
                     <input type="text" class="tinput"/>
-                    <label class="tlabel">E-mail</label>
+                    <label class="tlabel_adaptive tlabel">E-mail</label>
                   </div>
                   <div class="label_in_three_column">
                     <input type="text" class="tinput"/>
-                    <label class="tlabel">Телефон</label>
+                    <label class="tlabel_adaptive tlabel">Телефон</label>
                   </div>
                   <div class="label_in_three_column">
                     <input type="text" class="tinput"/>
-                    <label class="tlabel">Наценка/скидка</label>
+                    <label class="tlabel_adaptive tlabel">Наценка/скидка</label>
                   </div>
                 </div>
               </div>
               <div class="line_param_input">
-                <div class="label_in" style="padding-right: 5%">
+                <div class="label_in block_nopadding" style="padding-right: 5%">
                   <input type="text" class="tinput" />
-                  <label class="tlabel">Доп контакты</label>
+                  <label class="tlabel_adaptive tlabel">Доп контакты</label>
                 </div>
               </div>
             </div>
             <div class="component_body">
               <h3 style="margin: 20px 0 0">Данные пользователя</h3>
-              <div class="l_p">
+              <div class="l_p block_nopadding">
                 <div class="line_param_input">
                   <div class="label_in">
                     <input type="text" class="tinput" />
@@ -369,7 +369,7 @@
                   </div>
                 </div>
               </div>
-              <div class="r_p">
+              <div class="r_p block_nopadding">
                 <div class="line_param_input">
                   <div class="label_in">
                     <input type="text" class="tinput"/>
@@ -383,8 +383,8 @@
               </div>
             </div>
             <div class="component_body">
-              <div class="r_p" style="margin: 0; float: right">
-                <div class="nav_links" style="margin: 0; float: right">
+              <div class="r_p block_nopadding" style="margin: 0; float: right">
+                <div class="nav_links block_nopadding" style="margin: 0; float: right">
                   <a class="brd_green fill w50" href="#" style="width: 100%">Создать</a>
                 </div>
               </div>
