--- a/lk16.html
+++ b/lk16.html
@@ -338,10 +338,10 @@
       </div>
       <div class="footer">
         <div class="footer_line">
-          <div class="title_line">
+          <div class="title_line title_line_adaptive">
             <div class="title_line_t burger">Каталог</div>
           </div>
-          <div class="modal_line">
+          <div class="modal_line modal_line_catalog">
             <a href="#" class="closebig"></a>
             <h3>Каталог</h3>
             <div class="component_body">
