--- a/lk5.html
+++ b/lk5.html
@@ -466,7 +466,7 @@
       </div>
       <div class="footer">
         <div class="footer_line">
-          <div class="title_line">
+          <div class="title_line title_line_adaptive">
             <div class="title_line_t filter">
               Фильтры поиска
             </div>
