--- a/lk8.html
+++ b/lk8.html
@@ -308,7 +308,7 @@
       </div>
       <div class="footer">
         <div class="footer_line">
-          <div class="title_line">
+          <div class="title_line title_line_adaptive">
             <div class="title_line_t filter">Фильтры поиска</div>
           </div>
           <div class="modal_line">
