Еще много фиксов

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a href="lk6.html">Новый возврат</a></li>
     <li><a href="lk7.html">Возвраты</a></li>
     <li><a href="lk8.html">Складские остатски (прайс-лист)</a></li>
-    <li><a href="lk9.html">Складские остатки (операции по складу)</a></li>
+    <li><a href="lk9.html">Складские обороты (операции по складу)</a></li>
     <li><a href="lk10.html">Лицевой счет (детализация)</a></li>
     <li><a href="lk11.html">Партнеры склада</a></li>
     <li><a href="lk12.html">Запросы от нижестоящих</a></li>
