--- a/lk11.html
+++ b/lk11.html
@@ -142,7 +142,7 @@
             </div>
             <div class="r_p" style="padding-right: 0">
               <div class="nav_links nav_links_t">
-                <a class="brd_green fill w50 add_partner" href="#" style="margin-top: 0; float: right">Добавить нового партнера</a>
+                <a class="brd_green fill w50 add_partner add_partner_adaptive" href="#" style="margin-top: 0; float: right">Добавить нового партнера</a>
               </div>
             </div>
             <div class="f_part">
