--- a/lk14.html
+++ b/lk14.html
@@ -231,9 +231,12 @@
                   <tbody>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
-                          <span>22333</span>
-                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                        <div>
+                          <div style="float: right; margin-top: 11px">
+                            <span>22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -247,9 +250,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
-                          <span>22333</span>
-                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                        <div>
+                          <div style="float: right; margin-top: 11px">
+                            <span>22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -263,9 +269,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
-                          <span>22333</span>
-                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                        <div>
+                          <div style="float: right; margin-top: 11px">
+                            <span>22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -279,9 +288,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
-                          <span>22333</span>
-                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                        <div>
+                          <div style="float: right; margin-top: 11px">
+                            <span>22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -295,9 +307,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
-                          <span>22333</span>
-                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                        <div>
+                          <div style="float: right; margin-top: 11px">
+                            <span>22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
