--- a/lk15.html
+++ b/lk15.html
@@ -288,7 +288,10 @@
                     <tr style="background-color: #E6F4F4;">
                       <td>
                         <div class="lin_t_top">
-                          <span>2020-000255</span>
+                          <div style="float: right; margin-top: 11px">
+                            <span>2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3 open_view modal_view_adaptive">Просмотр</a>
                         </div>
                       </td>
@@ -307,7 +310,10 @@
                     <tr style="background-color: rgba(237, 26, 46, 0.16);">
                       <td>
                         <div class="lin_t_top">
-                          <span>2020-000255</span>
+                          <div style="float: right; margin-top: 11px">
+                            <span>2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3">Просмотр</a>
                         </div>
                       </td>
@@ -326,7 +332,10 @@
                     <tr style="background-color: #CEEBEA;">
                       <td>
                         <div class="lin_t_top">
-                          <span>2020-000255</span>
+                          <div style="float: right; margin-top: 11px">
+                            <span>2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3">Просмотр</a>
                         </div>
                       </td>
@@ -345,7 +354,10 @@
                     <tr>
                       <td>
                         <div class="lin_t_top">
-                          <span>2020-000255</span>
+                          <div style="float: right; margin-top: 11px">
+                            <span>2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3">Просмотр</a>
                         </div>
                       </td>
